commit ade8662cb1184703ebdd7c7d07cb42d2056a605b
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Sat Jun 19 16:38:15 2010 +0900

    aufs: follow the changes in 2.6.35, lockdep for sb->s_vfs_rename_mutex
    
    lockdep_set_class() is applied to sb->s_vfs_rename_mutex, and
    lockdep_off/on() in aufs become unnecessary.
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit d405a78a328658600f1928309bfbd2ded6136c59
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Sat Jun 19 03:36:21 2010 +0900

    aufs: tiny, remove unused lockdep_off/on()
    
    In linux-2.6.31, lockdep_set_class() was applited to them.
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit a4862273fc684dd24a9e0b4c29f89aaf53723afc
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Thu Jun 17 23:39:13 2010 +0900

    aufs: several GIT servers
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit 135ac88ed89e4780dc71bef119b803d4c594ea07
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Wed Jun 16 18:11:40 2010 +0900

    aufs: possible bugfix, sbinfo lock in deleting inode, lockdep
    
    (A commit in a series of introducing pid map/tree and making sure to
    acquire sbinfo lock in deleting inode. While every commit is
    git-bisect-able, you shoule read all commits in the series since a
    single commit may have less meaning.)
    
    A debugging feature in linux kernel, lockdep, warns
    "inconsistent {RECLAIM_FS-ON-W} -> {IN-RECLAIM_FS-R} usage."
    about sb->s_umount and aufs sbinfo lock.
    This is bogus or "false positive" since {RECLAIM_FS-ON-W} state was
    registered at allcating the root inode at mounting. This is definitly no
    RECLAIM state. It may be a limitation of s_umount in lockdep.
    Let's simply make it quiet.
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit 6ef8250091897e1cf7e8b77a7cfc61c7ffe58b58
Author: J. R. Okajima <hooanon05@yahoo.co.jp>